<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="malnutrition_backup_progressdialog_title">Data backup</string>
    <string name="malnutrition_backup_progressdialog_saving_households">Saving households...</string>
    <string name="malnutrition_backup_progressdialog_saving_children">Saving children...</string>
    <string name="malnutrition_backup_progressdialog_uploading">Uploading files to server...</string>
    <string name="malnutrition_periodic_reminder_title">Reminder from MSF</string>
    <string name="malnutrition_periodic_reminder_message">Connect to wireless networks whenever possible!</string>
    <string name="app_name">MSF Malnutrition</string>
    <string name="MSF_title">MSF Malnutrition</string>
    <string name="preferences_openmrs_connection_category_title">OpenMRS Connection</string>
    <string name="preferences_openmrs_connection_category_summary">Settings to configure connection to OpenMRS</string>
    <string name="preferences_openmrs_server_title">OpenMRS Server URL</string>
    <string name="preferences_openmrs_webservices_path_title">OpenMRS Webservices Path</string>
    <string name="preferences_openmrs_login_title">OpenMRS Login</string>
    <string name="preferences_openmrs_password_title">OpenMRS Password</string>
    <string name="preferences_openmrs_server_key">openmrs_server</string>
    <string name="preferences_openmrs_webservices_path_key">openmrs_webservices_path</string>
    <string name="preferences_openmrs_login_key">openmrs_login</string>
    <string name="preferences_openmrs_password_key">openmrs_password</string>
    <string name="preferences_openmrs_server_default">http://ks11.ocg.msf.org:8080/openmrs/</string>
    <string name="preferences_openmrs_webservices_path_default">ws/rest/</string>
    <string name="preferences_openmrs_login_default">testPhoneAccount</string>
    <string name="preferences_openmrs_password_default">Geneva9090</string>
    <string name="msf_intro_ok_button">Continue</string>
    <string name="msf_intro_text">This application will be used in <b><u>Cholera Treatment Centres</u></b> and <b><u>Cholera Treatment Units</u></b>.\n\nUse the following form entry to input information about the patient, the severity of patients\' cholera, and various treatments that are administered.</string>
    <string name="report_problem">Report a problem/suggestion</string>
    <string name="global_preferences_label">Global preferences</string>
    <string name="lessons_cholera">View the cholera video</string>
    <string name="test_gps_function">"Test GPS function"</string>
    <string name="malnutrition_workflow_households">Households</string>
    <string name="malnutrition_workflow_occupants">Occupants</string>
    <string name="malnutrition_workflow_observations">Observations</string>
    <string name="malnutrition_home_help">Help!</string>
    <string name="malnutrition_workflow_addnewchild">New child</string>
    <string name="malnutrition_workflow_addnewchildmale">New male child</string>
    <string name="malnutrition_workflow_addnewchildfemale">New female child</string>
    <string name="malnutrition_preference_key_pollster_id">pollster_id</string>
    <string name="malnutrition_preference_key_">pollster_id</string>
    <string name="malnutrition_months_old">months old</string>
    <string name="malnutrition_verify_back_buttton">Back</string>
    <string name="malnutrition_verify_complete_buttton">Finish</string>
    <string name="malnutrition_verify_instructions1">Please verify that you have entered all child info before finishing:</string>
    <string name="malnutrition_verify_males">Males recorded: </string>
    <string name="malnutrition_verify_females">Females recorded: </string>
    <string name="malnutrition_verify_confirmation_title">Confirmation of submission</string>
    <string name="malnutrition_verify_confirmation_message">Are you sure you want to delete this record?</string>
    <string name="malnutrition_verify_form_saved">Form saved!</string>
    <string name="malnutrition_home_add_new_household_button">Add a new household</string>
    <string name="malnutrition_home_search_previous_entries_button">Search previous entries</string>
    <string name="malnutrition_home_export_data">Back up data</string>
    <string name="malnutrition_home_addnewhousehold">Add new household</string>
    <string name="malnutrition_home_searchpreviousentries">Search Previous Entries</string>
    <string name="malnutrition_workflow_open_malnutrition_home">Malnutrition Project</string>
    <string name="malnutrition_home_tab_1">Malnutrition</string>
    <string name="malnutrition_home_tab_2">Online</string>
    <string name="malnutrition_home_tab_3">Admin</string>
    <string name="malnutrition_pollster_id_key">malnutrition_pollster_id</string>
    <string name="form_value_true">True</string>
    <string name="form_value_false">False</string>
    <string name="openmrs">OpenMRS</string>
    <string name="password">Password :</string>
    <string name="search_hint">Enter patient name or ID</string>
    <string name="search_enc">Enter patient name</string>
    <string name="server">URL</string>
    <string name="server_preferences">Change Settings</string>
    <string name="username">Username</string>
    <string name="view_patient">View Patient</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="change_username">Edit Patient</string>
    <string name="view_encounter">View encounter</string>
    <string name="edit_encounter">Edit encounter</string>
    <string name="delete_encounter">Delete encounter</string>
    <string name="first_startup_pref">first_startup</string>
    <string name="show_preferences_button_text">Show Preferences</string>
    <string name="launch_screen_search_patients">Search OpenMRS</string>
    <string name="resetDatabaseButton">Reset Phone\'s Database</string>
    <string name="downloadConfig">Download OpenMRS Config</string>
    <string name="givenNameLabel">"Given Name: "</string>
    <string name="middleNameLabel">"Middle Name: "</string>
    <string name="familyNameLabel">"Family Name: "</string>
    <string name="birthdateLabel">Birthdate:</string>
    <string name="register_new_patient">Register New Patient</string>
    <string name="enter_new_encounter">New Encounter With Existing Patient</string>
    <string name="search_local_encounters">Search Local Encounters</string>
    <string name="search_local_patients">Search Stored Patients</string>
    <string name="show_recent_patients">Recent Patients</string>
    <string name="show_recent_encounters">Recent Encounters</string>
    <string name="search_online_patients">Search Online Patients</string>
    <string name="search_online_encounters">Search Online Encounters</string>
    <string name="search_online_cohorts">Search Online Cohorts</string>
    <string name="send_new_entries">Send New Patients and Encounters</string>
    <string name="search">"Search: "</string>
    <string name="select_form">"Select form"</string>
    <string name="test_html_form_performance">"Test HTML performance"</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="form_loading">Please wait while the form is loading</string>
    <string name="exit_form">Quit the form</string>
    <string name="quit_form">Are you sure you want to quit the form? (all the data that are filled out will be unsaved)</string>
    <string name="feature_unavailable">Function unavailable</string>
    <string name="no_network_connection">No internet connection</string>
    <string name="reset_database">Are you sure you want to reset the phone\'s database?</string>
    <string name="reset_database_confirmation">Are you really sure you want to delete the ENTIRE database ? (you will lost ALL the datas stored on the phone)\n\nPassword :</string>
    <string name="all_datas_deleted">All datas have been successfully deleted !</string>
    <string name="wrong_password">Wrong password</string>
    <string name="h1_pageone">Child form (1/5)</string>
    <string name="h1_pagetwo">Child form (2/5)</string>
    <string name="h1_pagethree">Child form (3/5)</string>
    <string name="h1_pagefour">Child form (4/5)</string>
    <string name="h1_pagefive">Child form (5/5)</string>
    <string name="h1_submitpage">Child form - Summary</string>
    <string name="h1_submitpage_2">Child form completed</string>
    <string name="h2_child_survey_basic_informations">CHILD SURVEY BASIC INFORMATIONS</string>
    <string name="h2_informations_about_child_family">INFORMATIONS ABOUT THE CHILD AND HIS FAMILY</string>
    <string name="h2_informations_about_breastfeeding">INFORMATIONS ABOUT BREASTFEEDING</string>
    <string name="h2_anthropometric_measurment">ANTHROPOMETRIC MEASUREMENT</string>
    <string name="h2_morbidity_illness">MORBIDITY / ILLNESS</string>
    <string name="h2_morbidity_illness_2">MORBIDITY / ILLNESS</string>
    <string name="lbl_suividat">Survey date</string>
    <string name="lbl_under_suividat">Specify a date please</string>
    <string name="lbl_zone">Responsability area</string>
    <string name="lbl_under_zone">Enter the name of the responsability area</string>
    <string name="lbl_enqnom">Pollster id</string>
    <string name="lbl_under_enqnom">Specify a correct id please</string>
    <string name="lbl_nozone">Area id</string>
    <string name="lbl_under_nozone">Specify a correct id please</string>
    <string name="lbl_menagn">Household id</string>
    <string name="lbl_under_menagn">Specify a correct id please</string>
    <string name="lbl_villagen">Village name</string>
    <string name="lbl_under_villagen">Enter the village name please</string>
    <string name="lbl_novillage">Village id</string>
    <string name="lbl_under_novillage">Specify a correct id please</string>
    <string name="lbl_enfantid">Child id</string>
    <string name="lbl_under_enfantid">Specify a correct id please</string>
    <string name="lbl_enfnom">Child\'s last (family) name</string>
    <string name="lbl_under_enfnom">Enter the child\'s last (family) name please</string>
    <string name="lbl_enfprenom">Child\'s first (given) name</string>
    <string name="lbl_under_enfprenom">Enter the child\'s first (given) name</string>
    <string name="lbl_enfage">Age of the child (in months)</string>
    <string name="lbl_under_enfage">Enter a correct age please (must be between 5 and 25 months)</string>
    <string name="lbl_naissor">How did you get the age?</string>
    <string name="lbl_under_naissor">You have to specify an answer</string>
    <string name="lbl_enfsex">Child\'s sex</string>
    <string name="lbl_under_enfsex">Specify a correct id please</string>
    <string name="lbl_mennom">Household chief\'s name</string>
    <string name="lbl_under_mennom">Enter the household chief\'s name please</string>
    <string name="lbl_localis">Location of child\'s house. Define where is the house in the village.</string>
    <string name="lbl_under_localis">Enter some informations in this field</string>
    <string name="lbl_vitavec">With whom does the child live usually?</string>
    <string name="lbl_under_vitavec">Specify an answer please</string>
    <string name="lbl_orphan">Is the child orphan?</string>
    <string name="lbl_under_orphan">Specify an answer please</string>
    <string name="lbl_coepouse">Number of concubines of the mother</string>
    <string name="malnutrition_continue_from_child_entry">Entry complete</string>
    <string name="malnutrition_child_entry_form_household_chief_label">Household Chief:</string>
    <string name="malnutrition_child_entry_form_household_id">Household ID:</string>
    <string name="malnutrition_child_entry_form_village_label">Village:</string>
</resources>