<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="continueClicked"
        android:text="@string/msf_intro_ok_button"
        android:textSize="24dp" >
    </Button>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ok_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/introTextAndConnectionInfoLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/msf_logo"
                android:layout_width="fill_parent"
                android:layout_height="100dip"
                android:cropToPadding="true"
                android:padding="5dip"
                android:scaleType="fitCenter"
                android:src="@drawable/msf_logo_bilingual" />

            <LinearLayout
                android:id="@+id/serverLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dip" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/server"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/serverUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:singleLine="true"
                    android:text="@string/preferences_openmrs_server_default"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dip" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/username"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/usernameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:imeOptions="actionNext|flagNoEnterAction"
                    android:inputType="textNoSuggestions"
                    android:text="@string/preferences_openmrs_login_default" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pwLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dip" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/pwField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/intro_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/msf_intro_text" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>