<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/malnutrition_child_summary_main_panel"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center_horizontal"
        android:background="@drawable/malnutrition_child_summary_header" 
        android:layout_margin="1dip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/familyImageView"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:layout_gravity="center_vertical"
                android:src="@drawable/family256" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_medium" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/malnutrition_child_entry_form_household_chief_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malnutrition_child_entry_form_household_chief_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/malnutrition_child_entry_form_household_chief"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dip"
                        android:text="Robert Wilkie"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/malnutrition_child_entry_form_household_id_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malnutrition_child_entry_form_household_id"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/malnutrition_child_entry_form_household_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dip"
                        android:text="3018"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/malnutrition_child_entry_form_village_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malnutrition_child_entry_form_village_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/malnutrition_child_entry_form_village"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dip"
                        android:text="Cameroon"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="2dp" >

        <LinearLayout
            android:id="@+id/malnutrition_child_summary_form_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip" 
        android:padding="3dp">

        <Button
            android:id="@+id/malnutrition_child_entry_form_add_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/malnutrition_workflow_addnewchild" />

        <Button
            android:id="@+id/malnutrition_child_entry_form_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/malnutrition_continue_from_child_entry" />
    </LinearLayout>

</LinearLayout>