<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/translucent_gray_overlay"
    tools:ignore="HardcodedText" >
    
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white" >

        <LinearLayout
            android:id="@+id/firstbuttonlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dip" >

            <ImageButton
                android:id="@+id/malnutrition_verify_back_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitCenter"
                android:src="@drawable/back256" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malnutrition_verify_back_buttton"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondbuttonlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dip" >

            <ImageButton
                android:id="@+id/malnutrition_verify_complete_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitCenter"
                android:src="@drawable/success256" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malnutrition_verify_complete_buttton"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmtextlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@id/secondbuttonlayout"
            android:layout_toRightOf="@id/firstbuttonlayout"
            android:orientation="vertical"
            android:gravity="center" >

            <TextView
                android:id="@+id/malnutrition_verify_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/malnutrition_verify_instructions1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/malnutrition_verify_checkbox_males"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Males recorded: 3xxx" />

            <CheckBox
                android:id="@+id/malnutrition_verify_checkbox_females"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Females recorded: 2xxx" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>