<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createPatientRLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_light" >

    <RelativeLayout
        android:id="@+id/givenNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/labelGivenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/givenNameLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/givenNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/labelGivenName"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middleNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/givenNameLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/middleNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/middleNameLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/middleNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/middleNameLabel"
            android:ems="10"
            android:inputType="textPersonName" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/familyNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/middleNameLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/labelFamilyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/familyNameLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/familyNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/labelFamilyName"
            android:ems="10"
            android:inputType="textPersonName" >
        </EditText>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/familyNameLayout"
        android:layout_below="@+id/familyNameLayout"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Male" 
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/birthdateLayout"
            android:layout_below="@+id/familyNameLayout"
            android:text="Female"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/birthdateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/genderRadioGroup" >

        <TextView
            android:id="@+id/birthdateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/birthdateLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/birthdateLabel" />
    </RelativeLayout>

</RelativeLayout>